# ai-receptionist

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: smoke_gcal.py
src/ai_receptionist/: config.py  main.py
src/ai_receptionist/api/routes/: custom_llm.py  health.py
src/ai_receptionist/integrations/airtable/: appointment_repo.py  callLog_repo.py  customer_repos.py
src/ai_receptionist/integrations/google_calendar/: client.py
