[project]
name = "ai-receptionist"
version = "0.1.0"
description = "AI phone receptionist for HVAC business — Vapi + LangGraph + Airtable + Google Calendar"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyairtable>=2.3",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_receptionist"]
